--- a/style.css
+++ b/style.css
@@ -15,8 +15,7 @@ p.intro {
     border-bottom: 2px solid;
     border-color: olive;
     padding: 10px;
-    margin-left: 550px;
-    margin-right: 550px;
+    text-align: center;
 }
 button.openbtn {
     background-color: palegoldenrod;
