Added background image + Changed p.intro text

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /*style.css*/
 
 html {
+    background-image: url(https://cdn.wallpapersafari.com/63/33/fCze7y.jpg);
     background-color: cornsilk;
     color: olive;
     font-family: Calibri;
