--- a/style.css
+++ b/style.css
@@ -12,10 +12,9 @@ h1 {
     text-shadow: 2px 2px 4px gray;
 }
 
-.intro {
+div.intro {
     text-align: center;
 }
-
 p.intro {
     color: #444;
     margin: auto;
@@ -26,13 +25,13 @@ p.intro {
 button.openbtn {
     background-color: palegoldenrod;
     font-family: Calibri;
-    font-size: 15px;
+    font-size: 18px;
     margin-top: 20px;
     color: #444;
-    padding: 7px;
+    padding: 10px;
     border: none;
     border-radius: 5px;
-    box-shadow: 2px 2px lightgray;
+    box-shadow: 5px 5px lightgray;
     transition: 0.5s;
 }
 button.openbtn:hover {
@@ -42,7 +41,7 @@ button.openbtn:hover {
 }
 img.pfp {
     border-radius: 50%;
-    border: 1.5px solid;
+    border: 1.6px solid;
     padding: 5px;
     width: 200px;
     margin-bottom: 20px;
@@ -51,26 +50,53 @@ img.potted-plants {
     width: 500px;
 }
 
-.sec1-lists {
+div.sec1-lists {
     margin-left: 250px;
     font-size: 25px;
 }
+li {
+    color: #444;
+}
 
-.sec2-table {
+div.sec2-table {
     float: right;
-    margin-right: 255px;
+    margin-right: 175px;
     margin-top: 75px;
     margin-bottom: 100px;
 }
 table {
     border-collapse: collapse;
     text-align: center;
-    width: 150%;
+    width: 120%;
 }
 td, th {
     border: 1px solid #444;
     padding: 15px;
 }
+td {
+    font-size: 17px;
+    color: #444;
+}
+th {
+    font-size: 20px;
+    background-color: olive;
+    color: cornsilk;
+}
 tr:nth-child(even) {
+    background-color: cornsilk;
+}
+tr:nth-child(odd) {
     background-color: palegoldenrod;
+}
+
+div.sec3-time {
+    margin-left: 260px;
+    margin-top: 100px;
+    margin-bottom: 50px;
+}
+p.time {
+    float: right;
+    margin-right: 225px;
+    margin-top: 35px;
+    font-size: 25px;
 }
